# sip_pbx

./: .cursorrules  .gitignore  CURSOR_GUIDE.md  DEBUG-CHEATSHEET.md  GLOBAL_CURSOR_SETUP.md  HOW_TO_SET_API_KEY.md  IMPLEMENTATION_COMPLETE.md  LICENSE  QA_DOCUMENTATION_AND_EXECUTION_COMPLETE.md  README.md  SKILL.md  START_ALL_GUIDE.md  STT_FIX_SUMMARY.md  STT_TEST_GUIDE.md  TORCHVISION_FIX_GUIDE.md  WAV_AUDIO_FIX.md  create_test_cdr.py  env.example  generate_test_report.py  pyproject.toml  requirements-ai.txt  requirements.txt  start-all.ps1  start-server.ps1  test-detailed-output.txt  test-report.xml  test_g711.py  test_output.txt  test_rtp_parsing.py  test_sip_client.py  test_stt.py  test_udp_listener.py
bmad/.bmad-core/: install-manifest.yaml
bmad/docs/: api-specification.md  architecture.md  backend-testing-strategy.md  frontend-architecture.md  prd-detailed-phase1-4.md  prd.md  technical-architecture.md  user-flow.md
config/: config.example.yaml  config.yaml
docs/: AI_ATTENDANT_MODE.md  AI_CALL_HANDLING_DESIGN.md  AI_IMPLEMENTATION_GUIDE.md  B2BUA_STATUS.md  DOCS_CLEANUP_COMPLETE.md  DOCS_FINAL_STRUCTURE.md  DOCS_INTEGRATION_REPORT.md  DOCS_RESTRUCTURE_COMPLETE.md  DOCUMENTATION.md  GPU_SETUP.md  INDEX.md  PHASE1_IMPLEMENTATION_REPORT.md  PYTORCH_COMPATIBILITY.md  QUICK_START.md  README.md  SYSTEM_OVERVIEW.md  VOICE_AI_TURN_TAKING_REFERENCES.md  WINDOWS_CONSOLE_BUFFERING_FIX.md  ai-implementation-guide-part2.md  ai-voicebot-architecture.md  frontend-architecture.md
docs/analysis/: README.md  ai-response-time-analysis.md
docs/architecture/: ai-voicebot-architecture.md  frontend-architecture.md  realtime-call-dashboard-design.md  realtime-call-dashboard-implementation-summary.md  technical-architecture.md  voice-ai-conversation-engine.md
docs/design/: HITL-IMPLEMENTATION-STATUS-AND-RESEARCH.md  KNOWLEDGE_MANAGEMENT_DESIGN.md  OPERATOR-AWAY-MODE-DESIGN.md  README.md  ai-call-transfer.md  ai-greeting-and-capability-guide.md  ai-implementation-guide-part2.md  ai-implementation-guide.md  ai-outbound-call.md  knowledge-extraction-upgrade.md  multi-tenant-rag-and-dashboard.md
frontend/: DEPENDENCIES.md  FRONTEND_TODO.md  README.md  next.config.mjs  package-lock.json  package.json
migrations/: 001_create_unresolved_hitl_requests.sql  002_create_ai_insights_tables.sql
scripts/: diagnose_model_loading.py  download_models.py  fix_chromadb.ps1  fix_chromadb_conflict.ps1  fix_chromadb_version.ps1  fix_model_cache.ps1  fix_pytorch_compatibility.ps1  run_diagnose.ps1  setup-firewall.ps1  setup_operator_away_mode.py  test_ai_attendant.py
src/: __init__.py  main.py
tests/: check_gemini_models.py  conftest.py  test_dummy.py  test_google_auth.py  test_hitl_knowledge_flow.py  test_post_stt.py
(+316 files in other folders)
